--- a/branches/0.9.4/po/ru.po
+++ b/branches/0.9.4/po/ru.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "POT-Creation-Date: 2006-06-22 23:34+0600\n"
-"PO-Revision-Date: 2006-06-22 23:03+0600\n"
+"PO-Revision-Date: 2006-07-03 23:23+0600\n"
 "Last-Translator: Andrey Rahmatullin <wrar@altlinux.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2409,7 +2409,7 @@ msgstr "Сообщения об ошибках"
 
 #: plugins/about/aboutdlg.cpp:54
 msgid "Note: This is english mailing list"
-msgstr "Внимание: Это англоязычный список рассылки, просьба писать только по-английски<br> По-русски об ошибках сообщайте сюда:<br> <a href=\"mailto:sim-im-russian@lists.berlios.de\">sim-im-russian@lists.berlios.de</a>"
+msgstr "Внимание: Это англоязычный список рассылки, просьба писать только по-английски<br> По-русски об ошибках сообщайте сюда:<br> <a href=\"http://mailman.dg.net.ua/listinfo/sim-im-main\">http://mailman.dg.net.ua/listinfo/sim-im-russian</a>"
 
 # ui/aboutdlgbase.cpp:67
 #: plugins/about/aboutdlgbase.cpp:117 rc.cpp:1580
