Update ukraine translation

--- a/trunk/po/uk.po
+++ b/trunk/po/uk.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "POT-Creation-Date: 2006-03-11 02:52+0500\n"
-"PO-Revision-Date: 2006-03-20 10:16+0200\n"
+"PO-Revision-Date: 2006-07-10 20:24+0300\n"
 "Last-Translator: Ivan O.Krutyholova <ivan@city.gov.te.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -5151,10 +5151,9 @@ msgid ""
 msgstr ""
 "%l<br><br>\n"
 "<b>Актуальна погода:</b><br>\n"
-"<img src=\"icon:weatheri%i\"> %c<br>\n"
-"Температура: <b>%t</b> <br>\n"
-"(відчувається: <b>%f</b>)<br>\n"
-"Вологість: <b>%h%</b><br>\n"
+"<img src=\"icon:weather%i\"> %c<br>\n"
+"Температура: <b>%t</b> (відчувається: <b>%f</b>)<br>\n"
+"Вологість: <b>%h</b><br>\n"
 "Стрімкість: <b>%pp %</b><br>\n"
 "Тиск: <b>%p</b> (%q)<br>\n"
 "Вітер: <b>%b</b> <b>%w %g</b><br>\n"
@@ -5177,7 +5176,7 @@ msgid ""
 " Temperature: <b>%t</b><br>\n"
 msgstr ""
 "<br><br>\n"
-"<b>Прогнозувати для</b><br>\n"
+"<b>Прогноз на</b><br>\n"
 "<nobr><b>%d %w</b></nobr><br>\n"
 "<img src=\"icon:weather%n\"> %c<br>\n"
 " Температура: <b>%t</b><br>\n"
