--- a/branches/0.9.4/po/de.po
+++ b/branches/0.9.4/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "POT-Creation-Date: 2006-06-22 23:34+0600\n"
-"PO-Revision-Date: 2006-07-02 15:53+0100\n"
+"PO-Revision-Date: 2006-07-23 19:27+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Deutsch <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2286,7 +2286,7 @@ msgstr "Nummer:"
 #: rc.cpp:698
 #, no-c-format
 msgid "Area code:"
-msgstr "Postleitzahl"
+msgstr "Vorwahl:"
 
 #: plugins/_core/phonebase.cpp:115
 #: rc.cpp:701
