--- a/branches/0.9.4/po/ru.po
+++ b/branches/0.9.4/po/ru.po
@@ -5233,7 +5233,7 @@ msgstr "Загружать один уровень"
 
 #: plugins/jabber/jabber.cpp:333
 msgid "Load all levels"
-msgstr "Зашружать все уровни"
+msgstr "Загружать все уровни"
 
 # ui/changepasswd.cpp:36
 #: plugins/jabber/jabber_rosters.cpp:2021
