Update ukranian translation

--- a/trunk/po/uk.po
+++ b/trunk/po/uk.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "POT-Creation-Date: 2006-03-11 02:52+0500\n"
-"PO-Revision-Date: 2006-07-10 20:24+0300\n"
+"PO-Revision-Date: 2006-08-06 14:36+0300\n"
 "Last-Translator: Ivan O.Krutyholova <ivan@city.gov.te.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -36,17 +36,17 @@ msgstr "ivan@city.gov.te.ua"
 
 #: plugins/__homedir/homedir.cpp:51
 msgid "Home directory"
-msgstr "Домашній каталог"
+msgstr "Домашня тека"
 
 #: plugins/__homedir/homedir.cpp:52
 msgid "Plugin provides select directory for store config files"
 msgstr ""
-"Модуль вказує каталог, в якому будуть "
-"зберігатись файли конфігурації"
+"Модуль вказує теку, в якій будуть "
+"зберігатись файли налаштувань"
 
 #: plugins/__homedir/homedir.cpp:95
 msgid "Set home directory"
-msgstr "Встановити домашній каталог"
+msgstr "Задати домашню теку"
 
 #: plugins/__migrate/migrate.cpp:37
 msgid "Migrate"
@@ -56,7 +56,7 @@ msgstr "Міграція"
 msgid "Plugin provides convert configuration and history from SIM 0.8"
 msgstr ""
 "Модуль забезпечує перетворення "
-"конфігурації і історії з SIM 0.8"
+"налаштувань й історії з SIM 0.8"
 
 #: plugins/__migrate/migratedlg.cpp:81
 msgid "Cancel convert?"
@@ -5109,13 +5109,13 @@ msgstr "і"
 msgid ""
 "_: weather\n"
 "Early"
-msgstr "Ранній"
+msgstr "зранку"
 
 #: plugins/weather/weather.cpp:468
 msgid ""
 "_: weather\n"
 "Late"
-msgstr "Пізній"
+msgstr "під вечір"
 
 #: plugins/weather/weather.cpp:507 plugins/weather/weather.cpp:509
 msgid "m/s"
