--- a/branches/0.9.4-debian/debian/changelog
+++ b/branches/0.9.4-debian/debian/changelog
@@ -1,3 +1,14 @@
+sim (0.9.4.0+1-1) unstable; urgency=high
+
+  * SVN version rev. 1080 of bugfix release 0.9.4.1.
+  * Fully rewritten debian/rules.
+  * New binary packages:
+    - sim-qt - Qt3 variant (Closes: 237142);
+    - sim-data - arch-independent data files.
+  * Fixes FTBFS using autoconf 2.60 (Closes: #379636).
+
+ -- Alexander Petrov <zowers@gmail.com>  Thu, 27 Jul 2006 02:56:46 +0400
+
 sim (0.9.4-1) unstable; urgency=low
 
   * New upstream 0.9.4 - bugfix release (Closes: #376178).
