--- a/trunk/po/fr.po
+++ b/trunk/po/fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.8.1\n"
-"POT-Creation-Date: 2006-08-22 22:57+0600\n"
+"POT-Creation-Date: 2006-08-23 00:15+0600\n"
 "PO-Revision-Date: 2005-04-20 21:03+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Français <fr@li.org>\n"
@@ -5813,7 +5813,7 @@ msgstr "Météo"
 #: plugins/weather/weather.cpp:402
 #, fuzzy
 msgid ""
-"_: waether\n"
+"_: weather\n"
 "Clouds"
 msgstr "Météo"
 
