--- a/trunk/po/es.po
+++ b/trunk/po/es.po
@@ -9,7 +9,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: sim-es\n"
-"POT-Creation-Date: 2006-08-22 22:57+0600\n"
+"POT-Creation-Date: 2006-08-23 00:15+0600\n"
 "PO-Revision-Date: 2005-06-03 00:53+0200\n"
 "Last-Translator: Jorge Lopez <jorge.lopez@acm.org>\n"
 "Language-Team: ES <es@li.org>\n"
@@ -4817,7 +4817,7 @@ msgstr "Nublado"
 #: plugins/weather/weather.cpp:402
 #, fuzzy
 msgid ""
-"_: waether\n"
+"_: weather\n"
 "Clouds"
 msgstr "Nublado"
 
